# Irilis-Encoder

./: .gitignore  pyproject.toml
encoder/: __init__.py  __main__.py  daemon.py  dataclass.py  exceptions.py  logger.py  qbittorrent.py
encoder/datasources/: downloader.py  qbittorrent.py
